--- a/customerHome.html
+++ b/customerHome.html
@@ -186,7 +186,12 @@
             </div>
             <div class="col-md-3">
               <div class="form-group">
-                <i class="fa fa-video-camera"></i> &nbsp; <label>Video&Audio</label> &nbsp;<input style="position:static; left:0px; opacity:1;" type="checkbox" ng-model="cpForm.videoAndAudio">
+                <i class="fa fa-video-camera"></i> &nbsp; <label>Video</label> &nbsp;<input style="position:static; left:0px; opacity:1;" type="checkbox" ng-model="cpForm.video">
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="form-group">
+                <i class="fa fa-headphones"></i> &nbsp; <label>Audio</label> &nbsp;<input style="position:static; left:0px; opacity:1;" type="checkbox" ng-model="cpForm.audio">
               </div>
             </div>
             <div class="col-md-3">
