--- a/support/static/ngTemplates/app.customers.explore.html
+++ b/support/static/ngTemplates/app.customers.explore.html
@@ -72,9 +72,9 @@
       </div>
     </div>
       </div>
-      <div style="margin-top:10px" class="col-md-8">
+      <!-- <div style="margin-top:10px" class="col-md-8">
         <users-Field data="myAdvisors" url="/api/HR/users/" col="4" label="Advisors"></users-Field>
-      </div>
+      </div> -->
 
     </div>
     <div class="col-md-4">
@@ -112,7 +112,8 @@
         <h4><i class="fa fa-comment-o"></i> &nbsp; Chat &nbsp;<i class="fa {{custDetails.chat?'fa-check':'fa-times'}}" style="color:{{custDetails.chat?'green':'red'}}"></i>&nbsp;&nbsp;&nbsp;&nbsp;</h4><br>
         <h4><i class="fa fa-phone"></i> &nbsp; Call &nbsp;<i class="fa {{custDetails.call?'fa-check':'fa-times'}}" style="color:{{custDetails.call?'green':'red'}}"></i></i></h4><br>
         <h4><i class="fa fa-envelope"></i> &nbsp; Email &nbsp;<i class="fa {{custDetails.email?'fa-check':'fa-times'}}" style="color:{{custDetails.email?'green':'red'}}"></i></i></h4><br>
-        <h4><i class="fa fa-video-camera"></i> &nbsp; Video&Audio &nbsp;<i class="fa {{custDetails.videoAndAudio?'fa-check':'fa-times'}}" style="color:{{custDetails.videoAndAudio?'green':'red'}}"></i></i></h4><br>
+        <h4><i class="fa fa-video-camera"></i> &nbsp; Video &nbsp;<i class="fa {{custDetails.video?'fa-check':'fa-times'}}" style="color:{{custDetails.video?'green':'red'}}"></i></i></h4><br>
+        <h4><i class="fa fa-headphones"></i> &nbsp; Audio &nbsp;<i class="fa {{custDetails.audio?'fa-check':'fa-times'}}" style="color:{{custDetails.audio?'green':'red'}}"></i></i></h4><br>
         <h4><i class="fa fa-bar-chart-o"></i> &nbsp; VR &nbsp;<i class="fa {{custDetails.vr?'fa-check':'fa-times'}}" style="color:{{custDetails.vr?'green':'red'}}"></i></i></h4><br>
         <h4><i class="fa fa-phone"></i> &nbsp; Call Back &nbsp;<i class="fa {{custDetails.callBack?'fa-check':'fa-times'}}" style="color:{{custDetails.callBack?'green':'red'}}"></i></i></h4><br>
         <h4><i class="fa fa-ticket"></i> &nbsp; Ticket &nbsp;<i class="fa {{custDetails.ticket?'fa-check':'fa-times'}}" style="color:{{custDetails.ticket?'green':'red'}}"></i></i></h4><br>
