--- a/support/static/ngTemplates/app.customers.form.html
+++ b/support/static/ngTemplates/app.customers.form.html
@@ -42,15 +42,43 @@
         <strong>Mobile:</strong> {{form.contactPerson.profile.mobile}} <br>
       </div> -->
     </div>
+
     <div class="form-group">
       <label>Mobile</label>
       <input type="text " class="form-control" ng-model="form.mobile">
     </div>
+
+    <!-- <div style="" class="col-md-12" style="padding:0px">
+      <users-Field data="myAdvisors" url="/api/HR/users/" col="4" label="Advisors"></users-Field>
+    </div> -->
+
+    <div class="form-group">
+      <label>Advisors</label>
+      <div class="input-group">
+        <input type="text " class="form-control" ng-model="form.adName" uib-typeahead="u as u.username for u in advisorSearch($viewValue)" placeholder="Search by username">
+        <span class="input-group-btn">
+        <button type="button" class="btn btn-success" ng-click="addAdvisor(form.adName)">Add <i class="fa fa-plus"></i></button>
+      </span>
+      </div>
+    </div>
+    <div class="row" ng-if="form.advisors.length>0" style="margin:10px">
+      <div class="col-md-5 col-md-offset-1 card" ng-repeat="person in form.advisors" style="padding:10px;margin-top:10px">
+        <div class="col-md-10" style="font-size:18px">
+          <span>{{person.username}}</span>
+        </div>
+        <div class="col-md-2">
+          <i class="fa fa-times fa-lg" ng-click="removeAdvisors($index)" style="cursor:pointer"></i>
+        </div>
+      </div>
+    </div>
+
+
     <div style="cursor:pointer;margin:20px;" ng-click="companyAdvanceOptions = !companyAdvanceOptions">
       <div class="text-primary">
         <i class="fa fa-lg fa-sort-{{companyAdvanceOptions? 'up':'desc'}}" style="margin-right:20px;"></i> Show Advance Options
       </div>
     </div>
+
     <div ng-if="companyAdvanceOptions" class="animated fadeIn">
       <div class="form-group">
         <label>Address</label>
@@ -104,7 +132,10 @@
         <i class="fa fa-envelope"></i> &nbsp; <label>Email</label> &nbsp;<input type="checkbox" ng-model="cpForm.email">
       </div>
       <div class="form-group">
-        <i class="fa fa-video-camera"></i> &nbsp; <label>Video&Audio</label> &nbsp;<input type="checkbox" ng-model="cpForm.videoAndAudio">
+        <i class="fa fa-video-camera"></i> &nbsp; <label>Video</label> &nbsp;<input type="checkbox" ng-model="cpForm.video">
+      </div>
+      <div class="form-group">
+        <i class="fa fa-headphones"></i> &nbsp; <label>Audio</label> &nbsp;<input type="checkbox" ng-model="cpForm.audio">
       </div>
       <div class="form-group">
         <i class="fa fa-bar-chart-o"></i> &nbsp; <label>VR</label> &nbsp;<input type="checkbox" ng-model="cpForm.vr">
