--- a/HR/static/ngTemplates/app.HR.manage.users.items.html
+++ b/HR/static/ngTemplates/app.HR.manage.users.items.html
@@ -48,7 +48,7 @@
         </div> -->
       </div>
     </div>
-    <div class="row text-center" style="background:#d13548;color:white;">
+    <div class="row text-center" style="background:#337ab7;color:white;">
       <div class="col-md-7" style="padding:10px;">
         <div class="col-md-4">
           <span style="cursor:pointer;" ng-click="rowActionClicked('editProfile')">
@@ -77,7 +77,7 @@
               </span>
         </div> -->
       </div>
-      <div class="col-md-5" style="background: rgba(0, 0, 0, 0.2) none repeat scroll 0% 0%;padding:10px;">
+      <div class="col-md-5" style="background: #4787be none repeat scroll 0% 0%;padding:10px;">
         <span style="cursor:pointer;" ng-click="rowActionClicked('viewProfile')">
             <i class="fa fa-user fa-lg" style="margin-right:15px;"></i> View Profile
           </span>
