--- a/support/static/ngTemplates/app.projects.success.view.html
+++ b/support/static/ngTemplates/app.projects.success.view.html
@@ -56,7 +56,7 @@
               <td>{{v.products.part_no}}</td>
               <td>{{v.quantity1}}</td>
               <td >{{v.price}}</td>
-              <td ><input type="number"  step=1 class="form-control-pos" ng-init="v.quantity1" ng-model="v.quantity2"></td>
+              <td ><input type="number"  step=1 class="form-control-pos" ng-init="v.quantity2 = v.quantity1" ng-model="v.quantity2"></td>
               <td >{{v.price*v.quantity2}}</td>
             </tr>
             <tr>
@@ -73,12 +73,13 @@
         </tbody>
         </table>
         <div class="row">
-
-          <div class="col-md-12">
-
-              <a  class="btn btn-primary pull-right" style="cursor:pointer;margin:55px;" target="_blank" href="/api/support/slip/?project={{form.pk}}">Download</a>
-
+          <div class="col-md-10">
+              <button type="button" class="btn btn-success pull-right"  ng-click="send()" style="margin:30px 0 0 0;">save</button>
           </div>
+
+          <div class="col-md-2">
+              <a  class="btn btn-primary pull-right" style="cursor:pointer;margin:30px 60px 0 0;" target="_blank" href="/api/support/slip/?project={{form.pk}}">Download</a>
+           </div>
         </div>
 
 
