--- a/tools/static/ngTemplates/app.tools.form.apiAccounts.html
+++ b/tools/static/ngTemplates/app.tools.form.apiAccounts.html
@@ -2,7 +2,7 @@
   Create new API account
 </div>
 
-<div class="modal-body" ng-controller="businessManagement.tools.apiAccounts.create">
+<div class="modal-body" ng-controller="home.apiAccounts.create">
   <div class="container-fluid">
     <div class="form-group">
       <label>Email</label>
