--- a/tools/static/ngTemplates/app.tools.form.fileCache.new.html
+++ b/tools/static/ngTemplates/app.tools.form.fileCache.new.html
@@ -2,7 +2,7 @@
   Create a file cache
 </div>
 
-<div class="modal-body" ng-controller="businessManagement.tools.fileCache.new">
+<div class="modal-body" ng-controller="home.fileCache.new">
   <div class="container-fluid">
     <div class="form-group">
       <label>File</label>
@@ -15,4 +15,3 @@
     <button type="button" class="btn btn-primary" ng-click="save()">Create</button>
   </div>
 </div>
- 
