--- a/tools/static/ngTemplates/app.tools.fileCache.item.html
+++ b/tools/static/ngTemplates/app.tools.fileCache.item.html
@@ -1,4 +1,4 @@
-<div class="col-md-6" style="padding-bottom:10px;padding-left:5px;padding-right:5px;" ng-controller="businessManagement.tools.fileCache.item">
+<div class="col-md-6" style="padding-bottom:10px;padding-left:5px;padding-right:5px;" ng-controller="home.fileCache.item">
   <div class="card" style="padding:10px;">
     <div class="row">
       <div class="col-md-1">
