--- a/homepage/static/ngTemplates/app.homepage.blogs.html
+++ b/homepage/static/ngTemplates/app.homepage.blogs.html
@@ -52,7 +52,8 @@
 
     <div class="sec2Right">
 
-      <div class="socialIcons">
+
+      <div class="socialIcons" style="background-color: rgba(0, 0, 0, 0.2);">
         <div>
           <i class="fa fa-linkedin" aria-hidden="true"></i>
         </div>
@@ -66,6 +67,7 @@
           <i class="fa fa-youtube" aria-hidden="true"></i>
         </div>
       </div>
+
       <div class="bottomLine" style="padding:0 15px;">
         <div class="textHeading">
           <h4>Get Regular Blog Updates</h4>
