--- a/support/static/ngTemplates/app.inventory.html
+++ b/support/static/ngTemplates/app.inventory.html
@@ -40,16 +40,18 @@
       </div>
     </div>
   </div> -->
+
   <div class="row" style="margin-top:20px;">
     <div class="col-md-10 col-md-offset-1  text-right" style="padding-right:20px;">
-    <h2>  Total : {{total}} </h2>
+    <h2>  Total : {{total.toFixed(2)}} </h2>
     </div>
     <div class="col-md-10 col-md-offset-1">
       <div class="container-fluid" style="margin-top:15px;" ng-repeat="p in products">
         <div class="card" style="padding:10px;">
-          <div class="row container-fluid" ng-click="toggle(p.productPk,$index)" style="cursor:pointer;height:5vh;padding:10px">
+          <div class="row container-fluid" ng-click="toggle(p.productPk,$index)"  style="cursor:pointer;height:5vh;padding:10px">
             <div class="col-md-12 text-left">
-              <div class="col-md-2">
+
+              <div class="col-md-2" ng-if="">
                 <span style="font-size:12px"><strong> Part No : </strong>{{p.productPartno}} </span>
               </div>
               <div class="col-md-4">
@@ -59,10 +61,10 @@
                 <span style="font-size:12px"><strong> Quantity : </strong>{{p.totalqty}} </span>
               </div>
               <div class="col-md-2">
-                <span style="font-size:12px"><strong> Price : </strong>{{p.totalprice}} </span>
+                <span style="font-size:12px"><strong> Price : </strong>{{p.totalprice.toFixed(2)}} </span>
               </div>
               <div class="col-md-2">
-                <span style="font-size:12px"><strong> Total : </strong>{{p.totalVal}} </span>
+                <span style="font-size:12px"><strong> Total : </strong>{{p.totalVal.toFixed(2)}} </span>
               </div>
             </div>
           </div>
@@ -95,7 +97,7 @@
                 <th class="text-center">
                   Total
                 </th>
-                <tr ng-repeat="f in p.data">
+                <tr ng-repeat="f in p.data" ng-if="f.qty>0">
                   <td class="text-center">
                     <span>{{f.qty}}</span>
                   </td>
