--- a/support/static/ngTemplates/app.projects.approval.view.html
+++ b/support/static/ngTemplates/app.projects.approval.view.html
@@ -1,7 +1,7 @@
 <div class="container-fluid" style="padding:20px;" ng-controller="businessManagement.projects.approval.view">
       <div class="col-md-3" style="border-right:solid 2px #eeeeee;min-height:80vh;">
         <div class="row">
-          
+
 
         <div class="row">
           <div class="col-md-5 text-right">
@@ -58,7 +58,7 @@
                   <td ng-model="quanty"><input type="number"  step=1 class="form-control-pos" ng-model="v.quantity1">
                   <td ng-model="price"><input  class="form-control-pos" ng-model="v.price"></td>
                   <!-- <td ng-model="quanty"><input type="number"  step=1 class="form-control-pos" ng-model="v.quantity2"></td> -->
-                  <td >{{v.price*v.quantity1}}</td>
+                  <td >{{(v.price*v.quantity1).toFixed(2)}}</td>
                   <!-- <td><button type="button" class="btn btn-danger btn-sm" ng-click="deleteData(v.pk , $index)"> <i class="fa fa-trash"></i> </button></td> -->
                 </tr>
                 <tr>
@@ -68,7 +68,7 @@
                   <td></td>
                   <!-- <td></td> -->
                   <td>Total</td>
-                  <td ng-model="total"><b>{{total}}</b</td>
+                  <td ng-model="total"><b>{{total.toFixed(2)}}</b</td>
                   </tr>
 
 
