--- a/support/static/ngTemplates/app.projects.service.view.html
+++ b/support/static/ngTemplates/app.projects.service.view.html
@@ -95,17 +95,17 @@
             </tbody>
           </table>
           <div class="row">
-            <div class="col-md-10">
-              <button type="button" class="btn btn-success pull-right" ng-click="send()"  style="margin-right:55px;" >Send For Approval</button>
+            <div class="col-md-9">
+              <button type="button" class="btn btn-success pull-right" ng-click="send()"   >Send For Approval</button>
             </div>
             <div class="col-md-1">
               <!-- <button type="button" class="btn btn-success pull-right"  style="margin-right:55px;"> -->
-                <a  class="btn btn-primary pull-right" style="cursor:pointer;margin-right:10px;" target="_blank" href="/api/support/slip/?project={{form.pk}}">Download PO</a>
+                <span><a  class="btn btn-primary pull-right" style="cursor:pointer;" target="_blank" href="/api/support/slip/?project={{form.pk}}">PO<i  class="fa fa-download" style="font-size:1;margin-left:1em"  ></i></a></span>
               <!-- </button> -->
             </div>
-            <div class="col-md-1">
+            <div class="col-md-2">
               <!-- <button type="button" class="btn btn-success pull-right"  style="margin-right:55px;"> -->
-                <a  class="btn btn-primary pull-right" style="cursor:pointer;margin-right:10px;" target="_blank" href="/api/support/quotation/?project={{form.pk}}">Quotation</a>
+                <span><a  class="btn btn-primary " style="cursor:pointer;" target="_blank" href="/api/support/quotation/?project={{form.pk}}">Quotation<i  class="fa fa-download" style="font-size:1;margin-left:1em" ></i></a></span>
               <!-- </button> -->
             </div>
           </div>
