--- a/support/static/ngTemplates/app.projects.success.view.html
+++ b/support/static/ngTemplates/app.projects.success.view.html
@@ -57,7 +57,7 @@
               <td>{{v.quantity1}}</td>
               <td >{{v.price}}</td>
               <td ><input type="number"  step=1 class="form-control-pos" ng-init="v.quantity2 = v.quantity1" ng-model="v.quantity2"></td>
-              <td >{{v.price*v.quantity2}}</td>
+              <td >{{(v.price*v.quantity2).toFixed(2)}}</td>
             </tr>
             <tr>
               <td></td>
@@ -66,7 +66,7 @@
               <td></td>
               <td></td>
               <td>Total</td>
-              <td ><b>{{total}}</b</td>
+              <td ><b>{{total.toFixed(2)}}</b</td>
               </tr>
 
 
@@ -77,9 +77,12 @@
               <button type="button" class="btn btn-success pull-right"  ng-click="send()" style="margin:30px 0 0 0;">save</button>
           </div>
 
+          <!-- <div class="col-md-1">
+              <span><a  class="btn btn-primary " style="cursor:pointer;margin:30px 60px 0 0;" target="_blank" href="/api/support/slip/?project={{form.pk}}">PO<i  class="fa fa-download" style="font-size:1em;cursor:pointer;margin-left:1em"></i></a></span>
+          </div> -->
           <div class="col-md-2">
-              <a  class="btn btn-primary pull-right" style="cursor:pointer;margin:30px 60px 0 0;" target="_blank" href="/api/support/slip/?project={{form.pk}}">Download</a>
-           </div>
+              <span><a  class="btn btn-primary " style="cursor:pointer;margin:30px 60px 0 0;" target="_blank" href="/api/support/grn/?project={{form.pk}}">GRN<i  class="fa fa-download" style="font-size:1em;cursor:pointer;margin-left:1em"></i></a></span>
+          </div>
         </div>
 
 
