--- a/support/static/ngTemplates/app.inventory.html
+++ b/support/static/ngTemplates/app.inventory.html
@@ -3,15 +3,15 @@
   <div class="row">
     <div class="col-md-8 col-md-offset-2 text-right">
       <div class="container-fluid">
-
-
         <div class="input-group">
-          <input type='text' ng-model='searchText' class="form-control" placeholder="Search a Product " ng-enter="enterFun()" />
+          <input type='text' ng-model='searchText' class="form-control" placeholder="Search a Product " ng-enter="enterFun()" style="height:40px" />
           <span class="input-group-addon" ng-click="refresh()" style="cursor:pointer; background-color:#fff;"><i class="fa fa-refresh"></i></span>
           <span class="input-group-addon" ng-click="prev()" style="cursor:{{offset!=0?'pointer;background-color:#fff;':'not-allowed;background-color:#eee'}}"><i class="fa fa-arrow-left"></i>Prev</span>
           <span class="input-group-addon" ng-click="next()" style="cursor:pointer; background-color:#fff;">Next <i class="fa fa-arrow-right"></i></span>
           <span class="input-group-addon" ng-click="new()" style="cursor:pointer; background-color:#fff;">New <i class="fa fa-plus"></i></span>
           <!-- <span tclass="input-group-addon" ng-click="topButtonsClick('New')"><i class="fa fa-plus"></i> New </button> -->
+        &nbsp;&nbsp;&nbsp;  <span class="input-group-addon" ng-click="reset()" style="cursor:pointer; background-color:#fff;">Reset</span>
+        <span class="input-group-addon" ng-click="getList();" style="cursor:pointer; background-color:#fff;border:1px solid #fff;color:#286090"> <i class="fa fa-shopping-cart fa-2x"></i> {{cart.length}}</span>
         </div>
       </div>
 
@@ -44,7 +44,7 @@
     <div class="col-md-10 col-md-offset-1  text-right" style="padding-right:20px;">
     <h2>  Total : {{total}} </h2>
     </div>
-    <div class="col-md-10 col-md-offset-1">
+    <div class="col-md-12">
       <div class="container-fluid" style="margin-top:15px;" ng-repeat="p in products">
         <div class="card" style="padding:10px;">
           <div class="row container-fluid" ng-click="toggle(p.productPk,$index)" style="cursor:pointer;height:5vh;padding:10px">
@@ -52,7 +52,7 @@
               <div class="col-md-2">
                 <span style="font-size:12px"><strong> Part No : </strong>{{p.productPartno}} </span>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-2">
                 <span style="font-size:12px"><strong> Description : </strong>{{p.productDesc}} </span>
               </div>
               <div class="col-md-2">
@@ -63,6 +63,9 @@
               </div>
               <div class="col-md-2">
                 <span style="font-size:12px"><strong> Total : </strong>{{p.totalVal}} </span>
+              </div>
+              <div class="col-md-2">
+                  <button class="btn btn-primary"  style="font-size:12px" ng-click="addToCart(p.productPk);$event.stopPropagation();">Add to Cart </button>
               </div>
             </div>
           </div>
