--- a/support/static/ngTemplates/app.projects.approval.view.html
+++ b/support/static/ngTemplates/app.projects.approval.view.html
@@ -1,87 +1,84 @@
 <div class="container-fluid" style="padding:20px;" ng-controller="businessManagement.projects.approval.view">
-      <div class="col-md-3" style="border-right:solid 2px #eeeeee;min-height:80vh;">
-        <div class="row">
-          
+  <div class="col-md-3" style="border-right:solid 2px #eeeeee;min-height:80vh;">
+    <div class="row">
 
-        <div class="row">
-          <div class="col-md-5 text-right">
-            <label><h4> Project Title :  </h4> </label>
-          </div>
-          <div class="col-md-7">
-            <h4>{{form.title}}</h4> <br>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-5 text-right">
-            <label><h4> Service Name :  </h4> </label> <br>
-          </div>
-          <div class="col-md-7">
-            <h4>{{form.service.name}}</h4> <br>
-          </div>
-        </div>
-        <div class="row" >
-          <div class="col-md-5 text-right">
-            <label><h4> Tentative Closing Date :  </h4> </label> <br>
-          </div>
-          <div class="col-md-7">
-            <h4>{{form.date}}</h4> <br>
-          </div>
-        </div>
-        <div class="row" >
-          <div class="col-md-5 text-right">
-            <label><h4> Responsible Person :  </h4> </label> <br>
-          </div>
-          <div class="col-md-7" >
-            <h4 ng-repeat = "item in name"><span>{{item}}</span></h4> <br>
-          </div>
-        </div>
-        </div>
 
+      <div class="row">
+        <div class="col-md-5 text-right">
+          <label>
+            <h4> Project Title : </h4>
+          </label>
+        </div>
+        <div class="col-md-7">
+          <h4>{{form.title}}</h4> <br>
+        </div>
       </div>
-      <div class="col-md-9">
-          <!-- <div class="row" style="border-bottom:solid 2px #eeeeee;margin:5px"> -->
-            <table class="invoiceTable" style=" width: 100%;">
-            <tbody>
-              <tr style="background-color: #eeeeee;height: 96px;">
-                <th>Si.No</th>
-                <th>Product</th>
-                <th>Part No</th>
-                <th>Item Quantity</th>
-                <th>Price</th>
-                <!-- <th>Quantity recevied</th> -->
-                <th>Total</th>
-               </tr>
-                <tr ng-repeat="v in projects track by $index">
-                  <td>{{$index + 1}}</td>
-                  <td>{{v.products.description_1}}</td>
-                  <td>{{v.products.part_no}}</td>
-                  <td ng-model="quanty"><input type="number"  step=1 class="form-control-pos" ng-model="v.quantity1">
-                  <td ng-model="price"><input  class="form-control-pos" ng-model="v.price"></td>
-                  <!-- <td ng-model="quanty"><input type="number"  step=1 class="form-control-pos" ng-model="v.quantity2"></td> -->
-                  <td >{{v.price*v.quantity1}}</td>
-                  <!-- <td><button type="button" class="btn btn-danger btn-sm" ng-click="deleteData(v.pk , $index)"> <i class="fa fa-trash"></i> </button></td> -->
-                </tr>
-                <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <!-- <td></td> -->
-                  <td>Total</td>
-                  <td ng-model="total"><b>{{total}}</b</td>
-                  </tr>
+      <div class="row">
+        <div class="col-md-5 text-right">
+          <label>
+            <h4> Service Name : </h4>
+          </label> <br>
+        </div>
+        <div class="col-md-7">
+          <h4>{{form.service.name}}</h4> <br>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-5 text-right">
+          <label>
+            <h4> Tentative Closing Date : </h4>
+          </label> <br>
+        </div>
+        <div class="col-md-7">
+          <h4>{{form.date}}</h4> <br>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-5 text-right">
+          <label>
+            <h4> Responsible Person : </h4>
+          </label> <br>
+        </div>
+        <div class="col-md-7">
+          <h4 ng-repeat="item in name"><span>{{item}}</span></h4> <br>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <div class="col-md-9">
+    <!-- <div class="row" style="border-bottom:solid 2px #eeeeee;margin:5px"> -->
+    <table class="invoiceTable" style=" width: 100%;">
+      <tbody>
+        <tr style="background-color: #eeeeee;height: 96px;">
+          <th>Si.No</th>
+          <th>Product</th>
+          <th>Part No</th>
+          <th>Item Quantity</th>
+          <th>Price</th>
+          <!-- <th>Quantity recevied</th> -->
+          <th>Total</th>
+        </tr>
+        <tr ng-repeat="v in projects track by $index">
+          <td>{{$index + 1}}</td>
+          <td>{{v.products.description_1}}</td>
+          <td>{{v.products.part_no}}</td>
+          <td><input type="number" step=1 class="form-control-pos" ng-model="v.quantity1"></td>
+          <td><input class="form-control-pos" ng-model="v.price"></td>
+          <td>{{v.price*v.quantity1}}</td>
 
 
-            </tbody>
-            </table>
-            <div class="row">
-              <div class="col-md-12">
-                <button type="button" class="btn btn-success pull-right"  ng-click="send()"  style="margin:35px;" >Approve</button>
-              </div>
-            </div>
+        </tr>
+      </tbody>
+    </table>
+    <div class="row">
+      <div class="col-md-12">
+        <button type="button" class="btn btn-success pull-right" ng-click="send()" style="margin:35px;">Approve</button>
+      </div>
+    </div>
 
 
-          </div>
+  </div>
 
 
 
