--- a/support/static/ngTemplates/app.inventory.html
+++ b/support/static/ngTemplates/app.inventory.html
@@ -51,7 +51,7 @@
           <div class="row container-fluid" ng-click="toggle(p.productPk,$index)"  style="cursor:pointer;height:5vh;padding:10px">
             <div class="col-md-12 text-left">
 
-              <div class="col-md-2" ng-if="">
+              <div class="col-md-2" >
                 <span style="font-size:12px"><strong> Part No : </strong>{{p.productPartno}} </span>
               </div>
               <div class="col-md-4">
