--- a/homepage/static/ngTemplates/app.homepage.career.html
+++ b/homepage/static/ngTemplates/app.homepage.career.html
@@ -19,11 +19,11 @@
           <p>&ensp;</p>
         <p>Optimizely allows executives, marketers, product managers, and developers to be brave and make better business decisions.</p>
         <p>&ensp;</p>
-        <a href="#positions" class="btn btn-primary"style="width:270px;border:2px solid #4a90e2;padding:10px;font-size:16px;font-weight:bold;border-radius:40px;background-color:#0d3de8;color:#fff">Explore Optimizely Jobs</a>
+        <a class="btn btn-primary"style="border:2px solid #4a90e2;padding:10px;font-weight:bold;border-radius:40px;background-color:#0d3de8;color:#fff">Explore Optimizely Jobs</a>
       </span>
     </div>
     <div class="col-md-6 col-sm-12"style="padding:30px;">
-      <img src="/static/images/our-story.jpg" alt="" width="600px" height="400px">
+      <img src="/static/images/our-story.jpg" style="width:100%;">
     </div>
   </div>
 </div>
@@ -42,29 +42,29 @@
 </div>
 
 <div class="row" style="margin:0px;background-color:#262e45;color:#fff;padding:90px 20px 90px 30px;">
-  <div class="col-md-6 text-center" style="padding: 80px 90px 50px 90px;text-align:left">
+  <div class="col-md-4 col-md-offset-1" >
     <h3>Locations</h3>
     <span>Headquartered in San Francisco, we’re quickly expanding our global presence with offices in New York, Austin, Amsterdam, London, Cologne, Munich, and Sydney.</span>
   </div>
   <div class="col-md-6 text-center" style="">
-    <img src="/static/images/world-white.svg" alt="" width="600px" height="400px">
+    <img src="/static/images/world-white.svg" style="width:100%;">
   </div>
 </div>
 
 <div class="row" style="margin:0px;background: url('/static/images/food.jpg');background-repeat: no-repeat;background-size: cover;min-height:500px;padding:130px 20px 130px 30px;background-position:center;">
   <div class="col-md-5 col-md-offset-4 col-sm-12" style="color:#fff;padding:30px;background-color:#fff;border-radius:5px;color:#061549;padding:30px 50px 30px 50px">
     <h1 style="font-size:30px;font-weight:600;">We've got your back</h1>
-    <div class="" style="padding-top:20px;font-family:sans-serif;line-height:25px;">
+    <div class="" style="padding-top:20px;">
       <p>At Optimizely, we offer a wide array of benefits and perks to help our employees strike just the right balance between work time and personal time. We’re all about optimizing productivity by maximizing joy.</p>
-      <div class="" style="padding:30px;line-height:35px;font-size:16px">
+      <div class="" style="padding:30px;line-height:35px;">
         <ul class="list-unstyled">
-          <li><i class="fa fa-usd"></i>&emsp;Competitive pay and equity</li>
-          <li><i class="fa fa-stethoscope"></i>&emsp;Full medical coverage</li>
-          <li><i class="fa fa-bus"></i>&emsp;Public transit reimbursement</li>
-          <li><i class="fa fa-heart-o"></i>&emsp;Health and wellness stipend</li>
-          <li><i class="fa fa-calendar-o"></i>&emsp;Unlimited time off</li>
-          <li><i class="fa fa-user"></i>&emsp;17 weeks of parental leave</li>
-          <li><i class="fa fa-hand-paper-o"></i>&emsp;Community volunteering</li>
+          <li><i class="fa fa-usd"></i> Competitive pay and equity</li>
+          <li><i class="fa fa-stethoscope"></i> Full medical coverage</li>
+          <li><i class="fa fa-bus"></i> Public transit reimbursement</li>
+          <li><i class="fa fa-heart-o"></i> Health and wellness stipend</li>
+          <li><i class="fa fa-calendar-o"></i> Unlimited time off</li>
+          <li><i class="fa fa-user"></i> 17 weeks of parental leave</li>
+          <li><i class="fa fa-hand-paper-o"></i> Community volunteering</li>
         </ul>
       </div>
     </div>
