--- a/support/static/ngTemplates/app.customers.form.html
+++ b/support/static/ngTemplates/app.customers.form.html
@@ -144,6 +144,9 @@
         <i class="fa fa-desktop"></i> &nbsp; <label>Window Colour</label> &nbsp;<input type="color" ng-model="cpForm.windowColor">
       </div>
       <div class="form-group">
+        <i class="fa fa-desktop"></i> &nbsp; <label>Font Colour</label> &nbsp;<input type="color" ng-model="cpForm.fontColor">
+      </div>
+      <div class="form-group">
         <i class="fa fa-phone"></i> &nbsp; <label>Call Back</label> &nbsp;<input type="checkbox" ng-model="cpForm.callBack">
       </div>
       <div class="form-group">
