--- a/customerHome.html
+++ b/customerHome.html
@@ -196,7 +196,12 @@
             </div>
             <div class="col-md-3">
               <div class="form-group">
-                <i class="fa fa-desktop"></i> &nbsp; <label>Window Colour</label> &nbsp;<input style="position:static; left:0px; opacity:1;" type="color" ng-model="cpForm.windowColor">
+                <i class="fa fa-desktop"></i> &nbsp; <label>Window Color</label> &nbsp;<input style="position:static; left:0px; opacity:1;" type="color" ng-model="cpForm.windowColor">
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="form-group">
+                <i class="fa fa-desktop"></i> &nbsp; <label>Font Color</label> &nbsp;<input style="position:static; left:0px; opacity:1;" type="color" ng-model="cpForm.fontColor">
               </div>
             </div>
             <div class="col-md-3">
@@ -211,12 +216,12 @@
             </div>
             <div class="col-md-3">
               <div class="form-group">
-                <i class="fa fa-gg-circle"></i> &nbsp; <label>SupportBubble Colour</label> &nbsp;<input style="position:static; left:0px; opacity:1;" type="color" ng-model="cpForm.supportBubbleColor">
+                <i class="fa fa-gg-circle"></i> &nbsp; <label>SupportBubble Color</label> &nbsp;<input style="position:static; left:0px; opacity:1;" type="color" ng-model="cpForm.supportBubbleColor">
               </div>
             </div>
             <div class="col-md-3">
               <div class="form-group">
-                <i class="fa fa-info-circle"></i> &nbsp; <label>Icon Colour</label> &nbsp;<input style="position:static; left:0px; opacity:1;" type="color" ng-model="cpForm.iconColor">
+                <i class="fa fa-info-circle"></i> &nbsp; <label>Icon Color</label> &nbsp;<input style="position:static; left:0px; opacity:1;" type="color" ng-model="cpForm.iconColor">
               </div>
             </div>
             <div class="col-md-3">
