--- a/support/static/ngTemplates/app.inventory.html
+++ b/support/static/ngTemplates/app.inventory.html
@@ -157,7 +157,7 @@
               </div>
               <div class="col-md-offset-2 col-md-2 " >
                   <!-- <span><a  class="btn btn-primary " style="cursor:pointer;" target="_blank" href="">Material Issue<i  class="fa fa-download" style="font-size:1em;cursor:pointer;margin-left:1em"></i></a></span> -->
-                  <span><a class="btn btn-primary"  style="cursor:pointer;" target="_blank" href="/api/support/materialIssue/?value={{m.pk}}">Inoice <i class="fa fa-download" style="font-size:1;margin-left:1em"></i></a></span>
+                  <span><a class="btn btn-primary"  style="cursor:pointer;" target="_blank" href="/api/support/materialIssue/?value={{m.pk}}">Material Isuue <i class="fa fa-download" style="font-size:1;margin-left:1em"></i></a></span>
                 </div>
               </div>
             </div>
