--- a/support/static/ngTemplates/app.inventory.cart.modal.html
+++ b/support/static/ngTemplates/app.inventory.cart.modal.html
@@ -36,7 +36,7 @@
       <button type="button" class="btn btn-success pull-right" ng-click="save()" style="margin:35px;">Save</button>
     </div>
     <div class="col-md-2" style="padding-top:33px">
-      <span><a class="btn btn-primary" ng-if="values" style="cursor:pointer;" target="_blank" href="/api/support/materialIssue/?value={{values}}">Inoice <i class="fa fa-download" style="font-size:1;margin-left:1em"></i></a></span>
+      <span><a class="btn btn-primary" ng-if="values" style="cursor:pointer;" target="_blank" href="/api/support/materialIssued/?value={{values}}">Material Issue  <i class="fa fa-download" style="font-size:1;margin-left:1em"></i></a></span>
     </div>
   </div>
 
