--- a/support/static/ngTemplates/app.inventory.html
+++ b/support/static/ngTemplates/app.inventory.html
@@ -2,7 +2,7 @@
   <breadcrumb></breadcrumb>
   <div class="row">
   <div class="col-md-1">
-    <switch ng-model="modeToggle" class="neutral pull-right"></switch>
+     <switch ng-model="modeToggle" class="neutral pull-right"></switch>
   </div>
   </div>
 
@@ -143,7 +143,7 @@
 
 
   <div class="row" style="margin-top:20px;" >
-    <div class="col-md-12">
+    <div class="col-md-10 col-md-offset-2">
       <div class="container-fluid" style="margin-top:15px;" ng-repeat="m in materialIssue">
         <div class="card" style="padding:10px;">
           <div class="row container-fluid" ng-click="toggle(p.productPk,$index)"  style="cursor:pointer;height:5vh;padding:10px">
@@ -157,7 +157,7 @@
               </div>
               <div class="col-md-offset-2 col-md-2 " >
                   <!-- <span><a  class="btn btn-primary " style="cursor:pointer;" target="_blank" href="">Material Issue<i  class="fa fa-download" style="font-size:1em;cursor:pointer;margin-left:1em"></i></a></span> -->
-                  <span><a class="btn btn-primary"  style="cursor:pointer;" target="_blank" href="/api/support/materialIssue/?value={{m.pk}}">Material Isuue <i class="fa fa-download" style="font-size:1;margin-left:1em"></i></a></span>
+                  <span><a class="btn btn-primary"  style="cursor:pointer;" target="_blank" href="/api/support/materialIssued/?value={{m.pk}}">Material Isuue <i class="fa fa-download" style="font-size:1;margin-left:1em"></i></a></span>
                 </div>
               </div>
             </div>
