--- a/homepage/static/ngTemplates/app.homepage.blogs.html
+++ b/homepage/static/ngTemplates/app.homepage.blogs.html
@@ -1,5 +1,5 @@
 <div style="margin-top:80px;" style="width:100%;">
-  <h2 class="blogHeading">Blogs</h2>
+  <h2 class="genericHeading" style="margin:25px;">Blogs</h2>
 
   <div ng-if="firstSection.length>0" class="blog_container">
     <div class="flex_50Perc" ng-click="openBlog(firstSection[0].pk)" >
