--- a/homepage/static/ngTemplates/app.homepage.career.html
+++ b/homepage/static/ngTemplates/app.homepage.career.html
@@ -7,46 +7,44 @@
   </div>
 </div>
 
-<div class="row" style="margin:0px;padding:130px 20px 130px 30px">
-  <div class="col-md-10 col-md-offset-1 text-center">
-    <div class="col-md-6 col-sm-12"style="text-align:left;font-size:16px;font-family:sans-serif;padding:30px;">
+<div class="row" style="margin:0px;">
+  <div class="col-md-10 col-md-offset-1 text-center"style="padding:0px">
+    <div class="col-md-6 col-sm-12"style="text-align:left;font-size:16px;">
       <h3 style="font-weight:600;">Our Story</h3>
       <span>
         <p>Born from the success of President Obama’s 2008 campaign trail, Optimizely was founded to enable the world to turn data into action.</p>
-        <p>&ensp;</p>
         <p>Over the past seven years, Optimizely has evolved far beyond simple website A/B testing. We recently launched the world’s leading Experimentation Platform to enable experimentation everywhere: across the entire customer experience, on any
           channel, for any device, in any application.</p>
-          <p>&ensp;</p>
         <p>Optimizely allows executives, marketers, product managers, and developers to be brave and make better business decisions.</p>
-        <p>&ensp;</p>
-        <a class="btn btn-primary"style="border:2px solid #4a90e2;padding:10px;font-weight:bold;border-radius:40px;background-color:#0d3de8;color:#fff">Explore Optimizely Jobs</a>
+        <a class="btn btn-primary btn-rounded">Explore Optimizely Jobs</a>
       </span>
     </div>
-    <div class="col-md-6 col-sm-12"style="padding:30px;">
+    <div class="col-md-6 col-sm-12"style="padding:10px 0px 10px 0px;">
       <img src="/static/images/our-story.jpg" style="width:100%;">
     </div>
   </div>
 </div>
 
-<div class="row" style="margin:0px;padding:130px 20px 130px 30px;background-color:#f7f7f7;color:#262e45;">
-  <div class="col-md-10 col-md-offset-1 text-center">
-    <div class="col-md-6 col-sm-12"style="">
+<div class="row" style="margin:0px;color:#262e45;">
+  <div class="col-md-10 col-md-offset-1 text-center"style="padding:0px">
+    <div class="col-md-6 col-sm-12"style="padding:10px 0px 10px 0px;">
       <img src="/static/images/love-it.jpg" style="width:100%;">
     </div>
-    <div class="col-md-6 col-sm-12"style="text-align:left;font-size:16px;font-family:sans-serif;padding:90px 20px 20px 20px;">
+    <div class="col-md-6 col-sm-12"style="text-align:left;font-size:16px;">
       <h3 style="font-weight:600;">Why you'll love it here</h3>
-      <p>&ensp;</p>
-        <p>We’re building a team of inspired, smart, and driven individuals from all sorts of backgrounds. With countless opportunities for growth and mentorship, we strive to help each employee carve out the path that’s right for them.</p>
+        <p>We’re building a team of inspired, smart, and driven individuals
+          from all sorts of backgrounds. With countless opportunities for growth and mentorship,
+           we strive to help each employee carve out the path that’s right for them.</p>
     </div>
   </div>
 </div>
 
-<div class="row" style="margin:0px;background-color:#262e45;color:#fff;padding:90px 20px 90px 30px;">
-  <div class="col-md-4 col-md-offset-1" >
+<div class="row" style="margin:0px;background-color:#262e45;color:#fff;">
+  <div class="col-md-4 col-md-offset-1"style="padding-top:30px;">
     <h3>Locations</h3>
     <span>Headquartered in San Francisco, we’re quickly expanding our global presence with offices in New York, Austin, Amsterdam, London, Cologne, Munich, and Sydney.</span>
   </div>
-  <div class="col-md-6 text-center" style="">
+  <div class="col-md-6 col-sm-12">
     <img src="/static/images/world-white.svg" style="width:100%;">
   </div>
 </div>
@@ -56,7 +54,7 @@
     <h1 style="font-size:30px;font-weight:600;">We've got your back</h1>
     <div class="" style="padding-top:20px;">
       <p>At Optimizely, we offer a wide array of benefits and perks to help our employees strike just the right balance between work time and personal time. We’re all about optimizing productivity by maximizing joy.</p>
-      <div class="" style="padding:30px;line-height:35px;">
+      <div class="" style="padding:5px;line-height:35px;">
         <ul class="list-unstyled">
           <li><i class="fa fa-usd"></i> Competitive pay and equity</li>
           <li><i class="fa fa-stethoscope"></i> Full medical coverage</li>
@@ -86,11 +84,11 @@
     </span>
   </div>
 </div>
-<div class="row" style="margin:0px;padding:40px;">
+<div class="row" style="margin:0px;padding:10px;">
   <div class="col-md-12 text-center">
     <h1>EpsilonAI is for everyone</h1>
   </div>
-  <div class="col-md-6 col-md-offset-3 text-center" style="padding:30px;font-size:16px;line-height:30px;font-family:sans-serif;text-align:center">
+  <div class="col-md-6 col-md-offset-3 text-center" style="padding:10px;font-size:16px;line-height:30px;font-family:sans-serif;text-align:center">
     <span>At Optimizely, we embody inclusion and embrace diversity. Optimizely is an equal opportunity employer and makes employment decisions on the basis of merit. Optimizely prohibits
       discrimination based on race, color, religion, sex, sexualidentity, gender identity, marital status, veteran status, nationality, citizenship, age, disability, medical condition, pregnancy, or any other unlawful consideration.
     </span>
