--- a/homepage/static/ngTemplates/app.homepage.about.html
+++ b/homepage/static/ngTemplates/app.homepage.about.html
@@ -1,65 +1,114 @@
 <div class="row" style="margin:0px;background: url('/static/images/about-header.jpg');background-repeat: no-repeat;background-size: cover;min-height:400px;padding:140px 0px 0px 0px;background-position:center;"></div>
 <div class="row" style="margin:0px;padding:40px;color:#022750;font-family:sans-serif;">
-  <div class="col-md-12 text-center col-xs-12" style="margin:20px;">
+  <div class="col-md-12 text-center col-xs-12" style="">
     <h1 style="font-size:50px;font-weight:400;">About us</h1>
   </div>
-  <div class="col-md-8 col-md-offset-2">
-    <div class="col-md-6" style="text-align:left;font-size:16px;font-weight:300;">
+  <div class="col-md-8 col-md-offset-2 col-sm-12">
+    <div class="col-md-6 col-xs-12" style="text-align:left;font-size:16px;font-weight:300;">
       EpsilonAI is the world’s leading experimentation platform, enabling businesses to deliver continuous experimentation and personalization across websites,
       mobile apps and connected devices. EpsilonAI enables businesses to experiment deeply
-      into their technology stack and broadly across the entire customer experience.
-      <p>&emsp;</p>
+      into their technology stack and broadly across the entire customer experience.<br>
       The platform’s ease of use and speed of deployment empower organizations to create and run bold experiments that help them make data-driven decisions and grow faster.
       To date, marketers, developers and product managers have delivered over 700 billion experiences tailored to the needs of their customers.
     </div>
-    <div class="col-md-6 text-center" style="text-align:left;font-size:16px;font-weight:300;">
+    <div class="col-md-6 col-xs-12 text-center" style="text-align:left;font-size:16px;font-weight:300;">
       At EpsilonAI, continuous experimentation isn’t a product, it’s our DNA. It’s why we never stop trying new things and pushing ourselves to deliver for you. The way we see it,
       you’re the expert on your customers and your business. It’s our job to help you stay that way, getting sharper every day and turning even the most commonplace interactions into opportunities to learn and grow.
-      <p>&emsp;</p>
+      <br>
       Because the most successful businesses aren’t the ones with all the answers. They’re the ones that keep asking the big questions.
     </div>
   </div>
 </div>
-<div class="row" style="margin:0px;background: url('/static/images/about-hero.jpg');background-repeat: no-repeat;background-size: cover;min-height:500px;padding:140px 0px 0px 0px;background-position:center;"></div>
-<div class="row" style="margin:0px;background-color:#d8d9da;min-height:600px;padding:70px 0px 0px 0px;">
+<div class="row" style="margin:0px;background: url('/static/images/about-hero.jpg');background-repeat: no-repeat;background-size: cover;min-height:500px;padding:140px 0px 0px 0px;background-position:center;">
+</div>
+<div class="row owl-theme" style="margin:0px;">
   <div class="col-md-12 text-center" style="padding:30px;">
     <h3 style="font-size:30px;font-weight:400;">The world’s leading brands trust Optimizely to power their customer experiences.</h3>
   </div>
+  <div class=""ng-controller="controller.index">
   <div class="col-md-12">
-    <div class="col-md-10 col-md-offset-1 text-center"style="padding:40px">
-      <div class="col-md-3  col-sm-12" style="padding:60px;" >
+    <div class="col-md-10 col-md-offset-1 text-center">
+      <!-- <div class="col-md-3  col-sm-12" style="padding:30px;">
         <img src="/static/images/otlogo.png" alt="" width="250px" height="57px">
       </div>
-      <div class="col-md-3  col-sm-12" style="padding:60px;" >
+      <div class="col-md-3  col-sm-12" style="padding:30px;">
         <img src="/static/images/otlogo.png" alt="" width="250px" height="57px">
       </div>
-      <div class="col-md-3  col-sm-12" style="padding:60px;" >
+      <div class="col-md-3  col-sm-12" style="padding:30px;">
         <img src="/static/images/otlogo.png" alt="" width="250px" height="57px">
       </div>
-      <div class="col-md-3  col-sm-12" style="padding:60px;" >
+      <div class="col-md-3  col-sm-12" style="padding:30px;">
         <img src="/static/images/otlogo.png" alt="" width="250px" height="57px">
+      </div> -->
+      <div class="row" style="margin:0px;">
+        <div class="col-md-8 col-md-offset-2">
+          <div class="col-md-12">
+            <ng-owl-carousel class="owl-theme" owl-items="brands" owl-properties="properties" owl-ready="ready($api)">
+              <div ng-repeat="b in brands" style="padding:10px;">
+                <div class="anim-in-out anim-zoom-out">
+                  <div style="padding:20px;">
+                    <img class="img" ng-src="{{b.dp}}" />
+                  </div>
+                </div>
+              </div>
+            </ng-owl-carousel>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="col-md-8 col-md-offset-2 text-center"style="padding:40px">
-      <div class="col-md-4  col-sm-12"style="padding:60px;">
+    <div class="col-md-8 col-md-offset-2 text-center">
+      <!-- <div class="col-md-4  col-sm-12" style="padding:30px;">
         <img src="/static/images/otlogo.png" alt="" width="250px" height="57px">
       </div>
-      <div class="col-md-4  col-sm-12"style="padding:60px;">
+      <div class="col-md-4  col-sm-12" style="padding:30px;">
         <img src="/static/images/otlogo.png" alt="" width="250px" height="57px">
       </div>
-      <div class="col-md-4  col-sm-12"style="padding:60px;">
+      <div class="col-md-4  col-sm-12" style="padding:30px;">
         <img src="/static/images/otlogo.png" alt="" width="250px" height="57px">
+      </div> -->
+      <div class="row" style="margin:0px;">
+        <div class="col-md-8 col-md-offset-2">
+          <div class="col-md-12">
+            <ng-owl-carousel class="owl-theme" owl-items="brands" owl-properties="properties" owl-ready="ready($api)">
+              <div ng-repeat="b in brands" style="padding:10px;">
+                <div class="anim-zoom-out anim-in-out">
+                  <div style="padding:20px;">
+                    <img class="img" ng-src="{{b.dp}}" />
+                  </div>
+                </div>
+              </div>
+            </ng-owl-carousel>
+          </div>
+        </div>
       </div>
+    </div>
+      <!-- <div class="row" style="margin:0px;">
+        <div class="col-md-8 col-md-offset-2">
+          <div class="col-md-12">
+            <ng-owl-carousel class="owl-theme" owl-items="brands" owl-properties="properties" owl-ready="ready($api)">
+              <div ng-repeat="b in brands" style="padding:10px;">
+                <div class="anim-in-out anim-zoom-out">
+                  <div style="padding:20px;">
+                    <img class="img" ng-src="{{b.dp}}" />
+                  </div>
+                </div>
+              </div>
+            </ng-owl-carousel>
+          </div>
+        </div>
+      </div> -->
     </div>
   </div>
 </div>
-<div class="row" style="margin:0px;padding:40px;">
-<div class="col-md-12 text-center"style="padding:30px;font-size:20px;font-weight:400;">
-<h1 style="font-size:40px;font-weight:600;">We're hiring!</h1>
-<p>&emsp;</p>
-<p>Our happy customer base is growing and so are we. We are actively looking for spectacular people to join</p><p> our team.</p>
-</div>
-<div class="text-center">
-  <button type="button" class="btn btn-primary" style="width:300px;border:2px solid #4a90e2;padding:10px;font-size:16px;font-weight:bold;border-radius:40px;">VIEW JOB OPENINGS</button>
-</div>
+
+<div class="row" style="margin:0px;">
+  <div class="col-md-12 text-center" style="padding:30px;font-size:20px;font-weight:400;">
+    <h1 style="font-size:40px;font-weight:600;">We're hiring!</h1>
+    <p>&emsp;</p>
+    <p>Our happy customer base is growing and so are we. We are actively looking for spectacular people to join</p>
+    <p> our team.</p>
+  </div>
+  <div class="text-center" style="padding-bottom:20px;">
+    <a class="btn btn-primary btn-rounded">VIEW JOB OPENINGS</a>
+  </div>
 </div>
