--- a/homepage/static/ngTemplates/app.homepage.bpo.html
+++ b/homepage/static/ngTemplates/app.homepage.bpo.html
@@ -3,8 +3,8 @@
     <h1 style="font-size:50px;font-weight:600;">RPA - BPO automation solutions</h1>
   </div>
 </div>
-<div class="row" style="margin:0px;padding:40px;color:#022750;font-family:sans-serif;">
-  <div class="col-md-6 col-md-offset-3">
+<div class="row" style="margin:0px;"id="bpoDesc">
+  <div class="col-md-6 col-md-offset-3"style="padding:0px;">
     <div class="col-md-6">
       <h2 style="color:#f14607;font-weight:bold;">BPO meets RPA </h2>
       <p style="text-align:left;font-size:16px;font-weight:400;">
@@ -28,7 +28,7 @@
     <h1 style="font-size:40px;font-weight:700;">RPA's impact on BPO challenges</h1>
   </div>
 </div>
-<div class="row" style="margin:0px;padding:40px;">
+<div class="row" style="margin:0px;"id="bpoDesc">
   <div class="col-md-6 col-md-offset-3" style="font-size:18px;color:#060426">
     <h3 style="color:#2f549c;font-size:22px;font-weight:700;">RPA accelerates BPO innovation</h3>
     <p>&nbsp;</p>
