--- a/homepage/static/ngTemplates/app.homepage.pricing.html
+++ b/homepage/static/ngTemplates/app.homepage.pricing.html
@@ -4,8 +4,8 @@
     <span>EpsilonAI for Teams is a single workspace for your small- to medium-sized company or team.</span>
   </div>
   <div class="col-md-10 col-md-offset-1 col-sm-12" style="background-color:#fff;">
-    <div class="table-responsive">
-      <table class="table pricetable text-center">
+    <!-- <div class="table-responsive">
+      <table class="table text-center">
         <tr>
           <td><img src="/static/images/laptop_coffee.png" alt=""></td>
           <td width="50%">
@@ -59,7 +59,48 @@
           <td><i class="fa fa-check" aria-hidden="true"></i></td>
         </tr>
       </table>
+    </div> -->
+
+    <div class="col-md-12 col-sm-12 text-center" style="background-color:#fff;">
+    <div class="col-md-2 col-sm-12" style="padding:40px 10px 0px 0px;">
+      <img src="/static/images/laptop_coffee.png" alt="" width="250px" height="200px">
     </div>
+
+
+    <div class="col-md-4 col-sm-12 text-center col-md-offset-1">
+      <hr>
+      <h1 style="font-size:30px;font-weight:600;">Free</h1>
+      <p style="color:#f95914;font-weight:600">-----</p>
+      <p style="font-family:sans-serif;line-height:35px;font-size:15px;">For small teams wanting to try out Slack for an unlimited period of time.</p>
+      <a href="#" style="text-decoration: underline;font-size:14px;">Learn more</a>
+      <div class="">
+        <button type="button" class="btn btn-primary" style="border:2px solid #1c299d;font-weight:bold;background-color:#1c299d;color:#fff;"> Generate API Key</button>
+      </div>
+      <hr>
+    </div>
+
+    <div class="col-sm-12 enterpriseimg" style="padding:40px 10px 0px 0px;">
+      <img src="/static/images/users.png" alt="" width="230px" height="200px">
+    </div>
+    <!-- <div class="col-md-1">
+      <i class="fa fa-users fa-4x" aria-hidden="true"></i>
+
+    </div> -->
+    <div class="col-md-4 col-sm-12 text-center col-md-offset-1">
+      <hr>
+      <h1 style="font-size:30px;font-weight:600;">Enterprise</h1>
+      <p style="color:#f95914;font-weight:600">-----</p>
+      <p style="font-family:sans-serif;line-height:35px;font-size:15px;">For teams and businesses ready to make Slack the hub for their projects and communications.</p>
+      <a href="#" style="text-decoration: underline;font-size:14px;">Learn more</a>
+      <div class="">
+        <button type="button" class="btn btn-primary" style="border:2px solid #1c299d;font-weight:bold;background-color:#1c299d;color:#fff;">Contact The Sales </button>
+      </div>
+      <hr>
+    </div>
+  </div>
+
+
+  <div class="row"style="margin:0px;min-height:900px">
 
   </div>
 
