--- a/support/static/ngTemplates/app.inventory.cart.modal.html
+++ b/support/static/ngTemplates/app.inventory.cart.modal.html
@@ -29,7 +29,7 @@
           <td>{{v.part_no}}</td>
           <td><input type="number" step=1 class="form-control-pos" ng-model="v.prodQty"></td>
           <td>
-            <button type="button" class="btn btn-danger btn-sm" ng-click="delete(v.pk,$index)"> <i class="fa fa-trash"></i> </button>
+            <button type="button" class="btn btn-danger btn-sm" ng-click="delete($index)"> <i class="fa fa-trash"></i> </button>
           </td>
         </tr>
       </tbody>
