--- a/support/static/ngTemplates/app.projects.success.view.html
+++ b/support/static/ngTemplates/app.projects.success.view.html
@@ -86,6 +86,7 @@
         </div>
         <hr>
       <div class="row">
+        <div class="col-md-12">
         <table class="invoiceTable" style=" width: 100%;">
         <tbody>
           <tr style="background-color: #eeeeee;height: 50px;">
@@ -119,6 +120,7 @@
 
         </tbody>
         </table>
+        </div>
         </div>
       </div>
 
