--- a/ecommerce/static/ngTemplates/app.ecommerce.vendor.configure.configImage.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.vendor.configure.configImage.html
@@ -2,10 +2,10 @@
   <div class="container-fluid">
     <div class="col-md-8">
       <div class="row" style="margin:20px 15px">
-        <div class="form-group">
+        <!-- <div class="form-group">
           <label>Background Image (cover Image For Login Page)</label>
           <input type="file" file-model="form.backgroundImage">
-        </div>
+        </div> -->
         <div class="form-group">
           <label>Cart Image (Right Side Displaying Cart Image)</label>
           <input type="file" file-model="form.cartImage">
